kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-app
  name: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - image: betterptdev/go-app:latest
          name: go-app
          ports:
            - name: http
              containerPort: 8080
      # imagePullSecrets:
      # - name: registry-esys
